fix: Resetting font size on mobile, making header padding consistent
Font size on mobile is not 16px (previously too small)
Header padding now consistent with main portion of views

--- a/modules/ept-frontend/client/scss/ept/global/_overrides.scss
+++ b/modules/ept-frontend/client/scss/ept/global/_overrides.scss
@@ -13,7 +13,6 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
-  @include media($mobile) { font-size: $base-font-size * 0.85; }
 }
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
